# cheat-sheet

./: README.md
STM32/: README.md
c_cpp/: Anzahl_der_Nachkommastellen_in_std_cout.md  C++_Funktionszeiger.md  ClassWithAllOperators .hpp  Macro_NumberOfArguments.c  README.md  Variadic-Funktionen _in_C++.md  bash-special-parameters.sh  check_installed_libs.sh  check_standard.h  dynamic_library.cpp  inheritance_member_visibility.cpp  new_delete.cpp  operators.md  read-object-files.sh  warnings-gcc.md  x86-64_System_V_Calling_Convention.md
c_cpp/cmake-project/: CMakeLists.txt
c_cpp/cmake-project/.cache/clangd/index/: foo.cpp.11FC41088C0F1FD3.idx  foo.h.801C5DA2CEF8ECA0.idx  main.cpp.2B542774B9E0488E.idx
c_cpp/cmake-project/data/2023-09-15-01-58/: Camera-config.txt
c_cpp/cmake-project/src/: CMakeLists.txt  foo.cpp  foo.h  main.cpp
cmake/: README.md
git/: ModelViewDelegate.cpp  README.md
linux/: LPIC-1-Topic-107-Administrative-Tasks.md  README.md  bash-array.sh  bash-if-else.sh  bash-int-arithmetic.sh  clean_cmake_generated_files.sh  packages.md
python/: plot_pixel_coodsys.py
qt/: QWaitCondition_Example.cpp
qt/test1/: .gitignore  MyTestClass.cpp  MyTestClass.h  ShapePainter.cpp  ShapePainter.h  ToggleWidget.cpp  ToggleWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opencv.pri  test1.pro
qt6/: FileSystemViewer.cpp  KDAB_Model_View_Example.cpp
